# ardrone_thinc

./: .gitignore  CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
msg/: pose.msg
scripts/: drone_teleop.py  gen_grid.py
sock_test/: SocketTest.cpp  makefile  sock1  sock1.cpp  sock1.hpp  sock2  sock2.cpp  sock2.hpp
src/: ArdroneThinc.cpp  ArdroneThinc.cpp~  ArdroneThinc.hpp  ArdroneThinc.hpp~  SmartMain.cpp  Socket.cpp  Socket.hpp  SocketMain.cpp  SocketStub.cpp  Waypoint_Navigator_Client.cpp  Waypoint_Navigator_Server.cpp  doxyconfig.txt  drone.cpp  drone.hpp  main.cpp
src/ardrone_thinc/srv/: _Move.py  _Waypoint.py  _Waypoint_Navigator.py  __init__.py
srv/: PrintNavdata.srv  Waypoint.srv  Waypoint_Navigator.srv
srv_gen/cpp/include/ardrone_thinc/: PrintNavdata.h
urdf/: grid.urdf.xacro
